<resources>
    <string name="app_name">Mi legyen a vacsi?</string>
    <string name="title_breakfast">Reggeli</string>
    <string name="title_lunch">Ebéd</string>
    <string name="title_snack">Nasi</string>
    <string name="title_results">Vacsi</string>
    <string name="done_button_title">Kész</string>
    <string name="inputFoodName_title">Név</string>
    <string name="inputFoodCalories_title">Kalória</string>
    <string name="inputFoodProtein_title">Fehérje</string>
    <string name="inputFoodZsir_title">Zsír</string>
    <string name="inputFoodRost_title">Rost</string>
    <string name="inputFoodSzenhidrat_title">Szénhidrát</string>
    <string name="result_title">Mutasd mit hamizzak!</string>
    <string name="calories_counter_title">Kalória:</string>
    <string name="proteins_counter_title">Fehérje:</string>
    <string name="zsir_counter_title">Zsír:</string>
    <string name="rost_counter_title">Rost:</string>
    <string name="szenhidrat_counter_title">Szénhidrát:</string>

    <!-- CSV Import -->
    <string name="import_csv_button">CSV importálása</string>
    <string name="csv_import_success">CSV sikeresen importálva!</string>
    <string name="csv_import_error">Hiba a CSV importálásakor</string>
    <string name="csv_format_error">Hibás CSV formátum</string>
    <string name="csv_no_file_selected">Nincs kiválasztott fájl</string>

    <string name="material_calendar_monday">H</string>
    <string name="material_calendar_tuesday">K</string>
    <string name="material_calendar_wednesday">Sz</string>
    <string name="material_calendar_thursday">Cs</string>
    <string name="material_calendar_friday">P</string>
    <string name="material_calendar_saturday">Sz</string>
    <string name="material_calendar_sunday">V</string>

    <array name="material_calendar_months_array">
        <item>Január</item>
        <item>Február</item>
        <item>Márvius</item>
        <item>Április</item>
        <item>Május</item>
        <item>Június</item>
        <item>Július</item>
        <item>Augusztus</item>
        <item>Szeptember</item>
        <item>Október</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Ma</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
</resources>