<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_frag"
    tools:context=".ui.Meals.BreakfastFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/breakfast_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:isScrollContainer="false"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="150dp"
            android:divider="?attr/colorSecondary"
            android:dividerHeight="2dp"
            android:focusableInTouchMode="false"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignBottom="@+id/breakfast_list_view"
            android:background="@color/grey"
            />

        <!-- Import CSV Button - shown when no foods in list -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/import_csv_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/import_csv_button"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="120dp"
            android:hint="@string/inputFoodName_title"
            android:maxEms="5"
            android:maxLines="2"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="120dp"
            android:layout_toEndOf="@+id/textView"
            android:hint="@string/inputFoodCalories_title"
            android:inputType="number"
            android:maxEms="4"
            android:maxLines="2"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="120dp"
            android:layout_toEndOf="@+id/textView_calories"
            android:hint="@string/inputFoodProtein_title"
            android:maxEms="4"
            android:inputType="numberDecimal"
            android:maxLines="2"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_zsir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="85dp"
            android:hint="@string/inputFoodZsir_title"
            android:maxEms="4"
            android:inputType="numberDecimal"
            android:maxLines="2"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_rost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="85dp"
            android:layout_toEndOf="@+id/textView_zsir"
            android:hint="@string/inputFoodRost_title"
            android:maxEms="4"
            android:inputType="numberDecimal"
            android:maxLines="2"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_szenhidrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="85dp"
            android:layout_toEndOf="@+id/textView_rost"
            android:hint="@string/inputFoodSzenhidrat_title"
            android:maxEms="6"
            android:inputType="numberDecimal"
            android:maxLines="2"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="85dp"
            android:backgroundTint="?attr/actionbutton_primary_color"
            app:backgroundTint="?attr/actionbutton_primary_color"
            app:srcCompat="@drawable/ic_delete"
            app:tint="?attr/colorOnPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="85dp"
            android:backgroundTint="?attr/actionbutton_primary_color"
            app:backgroundTint="?attr/actionbutton_primary_color"
            app:tint="?attr/colorOnPrimary"
            app:srcCompat="@drawable/ic_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="85dp"
            android:backgroundTint="?attr/actionbutton_secondary_color"
            android:visibility="invisible"
            app:backgroundTint="?attr/actionbutton_secondary_color"
            app:srcCompat="@drawable/ic_cancel"
            app:tint="?attr/colorOnPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/checkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="85dp"
            android:backgroundTint="?attr/actionbutton_secondary_color"
            android:visibility="invisible"
            app:backgroundTint="?attr/actionbutton_secondary_color"
            app:srcCompat="@drawable/ic_check"
            app:tint="?attr/colorOnPrimary" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>