<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Foods.SnacksFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/breakfast_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="150dp"
            android:divider="@color/black"
            android:dividerHeight="2dp"
            android:textSize="20sp"
            android:focusableInTouchMode="false"
            android:isScrollContainer="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:maxEms="5"
            android:maxLines="2"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="85dp"
            android:hint="@string/inputFoodName_title"
            app:autoSizeTextType="uniform"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:maxLines="2"
            android:maxEms="4"
            android:layout_marginBottom="85dp"
            app:autoSizeTextType="uniform"
            android:layout_toEndOf="@+id/textView"
            android:hint="@string/inputFoodCalories_title"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="4"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="85dp"
            android:maxLines="2"
            app:autoSizeTextType="uniform"
            android:layout_toEndOf="@+id/textView_calories"
            android:hint="@string/inputFoodProtein_title"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_list_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="85dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="?attr/colorSecondaryVariant"
            app:srcCompat="@android:drawable/ic_input_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="85dp"
            android:visibility="invisible"
            app:tint="@color/white"
            android:backgroundTint="?attr/colorPrimaryVariant"
            app:srcCompat="@drawable/ic_cancel" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/checkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="85dp"
            android:layout_marginEnd="12dp"
            android:visibility="invisible"
            app:tint="@color/white"
            android:backgroundTint="?attr/colorPrimaryVariant"
            app:srcCompat="@drawable/ic_check" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>